# dotfiles

./: .editorconfig  .gitignore  Makefile  config.yaml  pyproject.toml
dotfiles/: zshrc
dotfiles/config/: starship.toml
dotfiles/vim/: vimrc  vimrc.python-mode
dotfiles/zsh.d/: 00_functions.zsh  01_general_vars.zsh  02_aliases.zsh  05_rust.zsh  06_python.zsh  07_node.zsh  09_flutter.zsh  10_utils.zsh
home/: .bash_profile  .bashrc  .gitconfig  .vimrc  .xmodmap  .zprofile  .zshenv  .zshrc  .zshrc.local
home/.atom/: config.cson  init.coffee  nohup.out
home/.bash.d/: 00_bash_it.bash  01_aliases.bash  02_data_tools.bash  03_others.bash
home/.byobu/: .ssh-agent  .tmux.conf  keybindings.tmux
home/.config/: starship.toml
home/.config/matplotlib/: fontList.cache  fontList.py3k.cache  matplotlibrc
home/.ipython/extensions/: line_profiler_ext.py  memory_profiler_ext.py
home/.pip/: pip.conf
home/.ssh/: authorized_keys  config  id_rsa  known_hosts
home/.vim/: vimrc
home/.zprezto/: .gitmodules  link_init_files.bash  link_init_files.zsh
home/.zsh/: zplug.zsh
home/.zsh.d/: 00_functions.zsh  00_general_vars.zsh  01_aliases.zsh  01_common.zsh  01_general_vars.zsh  02_aliases.zsh  02_data_tools.zsh  02_neuro.zsh  03_linux_aliases.sh  03_neuro.zsh  03_others.zsh  04_mac.zsh  04_ubuntu.zsh  04_xmodmap.zsh  06_python.zsh  07_node.zsh  07_tilix.zsh  08_go.zsh  09_flutter.zsh  10_python.zsh  10_utils.zsh  11_mac.zsh  11_node.zsh  12_ubuntu.zsh  13_mac_xmodmap.zsh  20_dev_libs.zsh  21_neuro.zsh  22_cuda.zsh  init.sh  init.zsh
home/envs/: postmkvirtualenv
(+63 files in other folders)
