[tool.poetry]
name = "dotfiles"
version = "0.0.1"
description = "My dotfiles"
authors = ["Alexandre <alexsavio@gmail.com>"]

[tool.poetry.urls]
"Source Code" = "https://github.com/alexsactio/dotfiles"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dotdrop = "1.8.2"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
